Prettier config added to enforce a consistent code style

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,7 @@
     "node": true
   },
   "extends": "standard",
-  "plugins": [
-    "sort-requires-by-path"
-  ],
+  "plugins": ["sort-requires-by-path"],
   "rules": {
     "sort-requires-by-path/sort-requires-by-path": 2
   }
