--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,23 @@
 {
-    "editor.folding": false,
-    "editor.glyphMargin": false,
-    "editor.insertSpaces": true,
-    "editor.minimap.renderCharacters": false,
-    "editor.minimap.showSlider": "always",
-    "editor.renderWhitespace": "all",
-    "editor.scrollBeyondLastLine": false,
-    "files.exclude": {
-      "dist": true,
-      "**/node_modules": true,
-      "package-lock.json": true
-    },
-    "files.trimFinalNewlines": true,
-    "explorer.compactFolders": false
-  }
+  "editor.folding": false,
+  "editor.glyphMargin": false,
+  "editor.insertSpaces": true,
+  "editor.minimap.renderCharacters": false,
+  "editor.minimap.showSlider": "always",
+  "editor.renderWhitespace": "all",
+  "editor.scrollBeyondLastLine": false,
+  "editor.tabSize": 2,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "files.encoding": "utf8",
+  "files.eol": "\n",
+  "files.exclude": {
+    "dist": true,
+    "**/node_modules": true,
+    "package-lock.json": true
+  },
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "explorer.compactFolders": false
+}
