--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mkdirp": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "pkg": "^5.8.1",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.1"
   }
 }
